# root

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  biome.json  flake.nix  package.json
.changeset/: config.json  dark-coins-tan.md  pre.json
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/actions/resolve/: action.yaml
.github/workflows/: check.yaml  labels.yaml  pull_request.yaml  pull_request_test.yaml  ready.yaml  release.yaml  test-package.yaml  test.yaml  unlock.yaml
examples/bazel/: .bazelrc  .gitignore  MODULE.bazel  README.md  flake.nix
examples/bazel/cpp/: .clang-tidy  BUILD.bazel  README.md
examples/bazel/cpp/src/: main.cc  uwebsockets_server.cc
examples/bazel/go/: BUILD.bazel  README.md  deps.MODULE.bazel  go.mod  go.sum
examples/bazel/go/src/lib/: lib.go  lib_test.go
examples/bazel/go/src/main/: main.go
examples/bazel/go/src/proto/: deps.go
examples/bazel/proto/: BUILD.bazel  hello.proto
examples/bazel/python/: BUILD.bazel  README.md  deps.MODULE.bazel  pyproject.toml  requirements_lock.txt
examples/bazel/python/src/: main.py  main_test.py
examples/bazel/rust/: BUILD.bazel  Cargo.toml  README.md
examples/bazel/rust/src/: lib.rs  main.rs
tools/: pre-commit.nix  template.nix
