load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@protobuf//bazel:py_proto_library.bzl", "py_proto_library")
load("@rules_proto_grpc_go//:defs.bzl", "go_proto_library")
load("@rules_rust_prost//:defs.bzl", "rust_prost_library")

proto_library(
    name = "hello_proto",
    srcs = ["hello.proto"],
    deps = [
        "@googleapis//:google_type_date_proto",
    ],
    visibility = ["//visibility:public"],
)

cc_proto_library(
    name = "hello_cc_proto",
    deps = [":hello_proto"],
)

go_proto_library(
    name = "hello_go_proto",
    importpath = "example.com/basic/proto/hellov1",
    protos = [":hello_proto"],
    options = {
        "*": [
            "Mgoogle/type/date.proto=google.golang.org/genproto/googleapis/type/date",
        ],
    },
    deps = [
        "@org_golang_google_genproto//googleapis/type/date",
    ],
)

py_proto_library(
    name = "hello_python_proto",
    deps = [":hello_proto"],
)

rust_prost_library(
    name = "hello_rust_proto",
    proto = ":hello_proto",
)
